Added test routines although the requests controller update test fails for no obvious reason; updated fixtures but not sure if they're any use or not; added more validation; no idea why using the fixture data fails to work with the controller tests, but all defined tests complete

--- a/test/fixtures/activity_types.yml
+++ b/test/fixtures/activity_types.yml
@@ -1,11 +1,43 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  description: MyText
-  color: MyString
+commissions:
+  name: "Commissions"
+  description: "Painting and other customer-commissioned work"
+  color: "Blue"
+  created_at: "2017-03-18 17:46:19"
+  updated_at: "2017-03-18 17:46:19"
 
-two:
-  name: MyString
-  description: MyText
-  color: MyString
+prep:
+  name: "Preparation"
+  description: "Lesson preparation"
+  color: "Lilac"
+  created_at: "2017-03-18 17:46:19"
+  updated_at: "2017-03-18 17:46:19"
+
+admin:
+  name: "Admin"
+  description: "Paperwork, postage, social media and other chores"
+  color: "Grey"
+  created_at: "2017-03-18 17:46:19"
+  updated_at: "2017-03-18 17:46:19"
+
+writing:
+  name: "Writing"
+  description: "Documentation, articles and blog posts"
+  color: "Salmon"
+  created_at: "2017-03-18 17:46:19"
+  updated_at: "2017-03-18 17:46:19"
+
+teaching:
+  name: "Teaching"
+  description: "Teaching"
+  color: "Orange"
+  created_at: "2017-03-18 17:46:19"
+  updated_at: "2017-03-18 17:46:19"
+
+other:
+  name: "No description"
+  description: "Other stuff"
+  color: "LightGreen"
+  created_at: "2017-03-18 17:46:19"
+  updated_at: "2017-03-18 17:46:19"
