--- a/config/database.yml
+++ b/config/database.yml
@@ -20,14 +20,15 @@ default: &default
 development:
   <<: *default
   database: <%= ENV['COMMISSIONS_DB'] %>
-  socket: /tmp/mysql.sock
+  socket: <%= ENV['MYSQL_SOCK'] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: book-a-commission_test
+  database: commission_test
+  socket: <%= ENV['MYSQL_SOCK'] %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
