--- a/test/fixtures/requests.yml
+++ b/test/fixtures/requests.yml
@@ -2,26 +2,29 @@
 
 one:
   id: 1
+  title: "A flattering portrait"
   fullname: "Penny Portrait"
   contact_address: "penny@do-me-a-painting.net"
   commission_type_id: 1
   due_date: "2017-07-14 19:34:45"
-  comments: "A picture in your finest style please"
+  comments: "A picture in your finest style please; take off a few years and pounds, please"
   created_at: "2017-03-18 17:46:19"
   updated_at: "2017-03-18 17:46:19"
 
 awkward:
   id: 2
+  title: A wonderful life
   fullname: Andy Awkward
   contact_address: 25@Down-the-lane.com
   commission_type_id: 2
   due_date: "2017-06-14 19:34:45"
-  comments: "More text"
+  comments: "Words cannot begin to describe"
   created_at: "2017-03-18 17:46:19"
   updated_at: "2017-03-18 17:46:19"
 
 pastelboy:
   id: 3
+  title: The scrobulator
   fullname: Mike Morton
   contact_address: mike@morton.me
   commission_type_id: 3
@@ -33,6 +36,7 @@ pastelboy:
 muttpic:
   id: 4
   fullname: "Woofy Donaldson"
+  title: A woof, a bark and a wagging tail
   contact_address: "barker@mutt-pics.com"
   commission_type_id: 4
   due_date: "2017-09-14 19:34:45"
