--- a/test/fixtures/requests.yml
+++ b/test/fixtures/requests.yml
@@ -2,7 +2,7 @@
 
 one:
   id: 1
-  title: "A flattering portrait"
+  title: A flattering portrait
   fullname: "Penny Portrait"
   contact_address: "penny@do-me-a-painting.net"
   commission_type_id: 1
