--- a/test/fixtures/commissions.yml
+++ b/test/fixtures/commissions.yml
@@ -19,3 +19,10 @@ four:
   id: 4
   request_id: 4
   commission_type_id: 3
+
+deleteme:
+  id: 444
+  request_id: 444
+  commission_type_id: 444
+  created_at: "2017-03-18 17:46:19"
+  updated_at: "2017-03-18 17:46:19"
