--- a/test/fixtures/requests.yml
+++ b/test/fixtures/requests.yml
@@ -43,4 +43,14 @@ muttpic:
   comments: "This one is for the upcoming exhibition"
   created_at: "2017-03-18 17:46:19"
   updated_at: "2017-03-18 17:46:19"
-  
+ 
+deleteme:
+  id: 444
+  fullname: Macintosh Spudface
+  title: Growbag
+  contact_address: potato@spuds.are.us
+  commission_type_id: 444
+  due_date: 2018-11-22 14:22:10
+  comments: "This one can be deleted when not required"
+  created_at: "2017-03-18 17:46:19"
+  updated_at: "2017-03-18 17:46:19"
