Switched to using activityable for the polymorphic associatio and fixed test breakage

--- a/test/fixtures/activities.yml
+++ b/test/fixtures/activities.yml
@@ -4,54 +4,54 @@ one:
   id: 1
   title: The perils of Ruby
   details: "Readline 7? Surely, you're not serious"
-  activable_id: 2
-  activable_type: ActivityCommission
+  activityable_id: 2
+  activityable_type: ActivityCommission
 
 two:
   id: 2
   title: PracticePic
   details: Practicing
-  activable_id: 2
-  activable_type: ActivityDevelopment
+  activityable_id: 2
+  activityable_type: ActivityDevelopment
 
 three:
   id: 3
   title: HolidayPic
   details: Holidaying
-  activable_id: 2
-  activable_type: ActivityHoliday
+  activityable_id: 2
+  activityable_type: ActivityHoliday
 
 four:
   id: 4
   title: OtherPic
   details: Othering
-  activable_id: 2
-  activable_type: ActivityOther
+  activityable_id: 2
+  activityable_type: ActivityOther
 
 five:
   id: 5
   title: PaperworkPic
   details: Paperworking
-  activable_id: 2
-  activable_type: ActivityPaperwork
+  activityable_id: 2
+  activityable_type: ActivityPaperwork
 
 six:
   id: 6
   title: PreparationPic
   details: Preparationing
-  activable_id: 2
-  activable_type: ActivityPreparation
+  activityable_id: 2
+  activityable_type: ActivityPreparation
 
 seven:
   id: 7
   title: TeachingPic
   details: Teaching
-  activable_id: 2
-  activable_type: ActivityTeaching
+  activityable_id: 2
+  activityable_type: ActivityTeaching
 
 eight:
   id: 8
   title: WritingPic
   details: Writing
-  activable_id: 2
-  activable_type: ActivityWriting
+  activityable_id: 2
+  activityable_type: ActivityWriting
